2164: fix sonar issues: ReferralHelper, BulkCreation. Create dedicated exceptions for Create Service and Verify JWT